--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
   </head>
   <body>
     <h1>Roster</h1>
