--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
-    <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <h1>Roster</h1>
@@ -34,6 +34,11 @@
       </div>
     </section>
     
-    <script src="index.js"></script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
+    <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
   </body>
 </html>
