--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <h1>Roster</h1>
-
-    <section>
-      <div>
+    <div class="row">
+      <div class="medium-offset-2 medium-8 columns">
+        <h1>Roster</h1>
         <form>
-          <p>
-            <label for="personName">Name</label>
-            <input type="text" name="personName">
-          </p>
-          <p>
-            <button type="submit">Go</button>
-          </p>
+          <div class="small-9 columns">
+            <input type="text" name="personName" placeholder="Enter name">
+          </div>
+          <div class="small-3-columns">
+            <button type="submit" class="button">Add Person</button>
+          </div>
         </form>
       </div>
+    </div>
 
-      <div class="details">
-        <ul></ul>
-      </div>
-    </section>
+    <div class="details">
+      <ul></ul>
+    </div>
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
