--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="medium-offset-2 medium-8 columns">
         <h1>Roster</h1>
-        <form>
+        <form id="new-student">
           <div class="small-9 columns">
             <input type="text" name="personName" placeholder="Enter name">
           </div>
@@ -34,7 +34,7 @@
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
     <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
   </body>
 </html>
