--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <button type="submit" class="button">Add Person</button>
           </div>
         </form>
-        <div class="details">
-          <ul></ul>
-        </div>
+      </div>
+
+      <div class="medium-offset-2 medium-8 columns">
+        <ul id="personList"></ul>
       </div>
     </div>
     
