Add autofocus and required to input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Roster</h1>
         <form id="new-person">
           <div class="small-9 columns">
-            <input type="text" name="personName" placeholder="Enter name">
+            <input type="text" name="personName" placeholder="Enter name" autofocus required>
           </div>
           <div class="small-3-columns">
             <button type="submit" class="button">Add Person</button>
