--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
       </div>
 
       <div class="medium-offset-2 medium-8 columns">
-        <ul id="personList"></ul>
+        <ul id="person-list">
+          <li class="person template">
+            <span class="person-name"></span>
+            <span class="actions">
+              <button class="remove alert button">Remove</button>
+            </span>
+          </li>
+        </ul>
       </div>
     </div>
     
