Remove and promote person using people array

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <span class="person-name"></span>
             <span class="actions">
               <button class="remove alert button">Remove</button>
+              <button class="promote success button">Promote</button>
             </span>
           </li>
         </ul>
