--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           </div>
         </form>
       </div>
-
+    </row>
+    
+    <div class="row">
       <div class="medium-offset-2 medium-8 columns">
         <ul id="person-list">
           <li class="person template">
