Move up and down

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
       </div>
     </row>
-    
+
     <div class="row">
       <div class="medium-offset-2 medium-8 columns">
         <ul id="person-list">
@@ -35,6 +35,8 @@
             <span class="actions">
               <button class="remove alert button">Remove</button>
               <button class="promote success button">Promote</button>
+              <button class="button up">Move Up</button>
+              <button class="button down">Move Down</button>
             </span>
           </li>
         </ul>
