--- a/index.html
+++ b/index.html
@@ -35,13 +35,23 @@
             <span class="actions">
               <button class="remove alert button">Remove</button>
               <button class="promote success button">Promote</button>
-              <button class="button up">Move Up</button>
-              <button class="button down">Move Down</button>
+              <button class="secondary button up">↑</button>
+              <button class="secondary button down">↓</button>
             </span>
           </li>
         </ul>
       </div>
     </div>
+
+    <div class="row">
+      <div class="medium-offset-2 medium-8 columns">
+      </div>
+    </div>
+
+    <audio data-key="letsgo" src="sound/mlpit_mario_lets-a_go.wav"></audio>
+    <audio data-key="coin" src="sound/smb3_coin.wav"></audio>
+    <audio data-key="ohno" src="sound/mlpit_mario_oh_no.wav"></audio>
+    <audio data-key="bump" src="sound/smb3_bump.wav"></audio>
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
