--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <body>
     <div class="row">
       <div class="medium-offset-2 medium-8 columns">
-        <h1>Roster</h1>
+        <div class="header">
+          <img src="img/mario.gif" width=50px />
+          <h1>Roster</h1>
+        </div>
         <form id="new-person">
           <div class="small-9 columns">
             <input type="text" name="personName" placeholder="Enter name" autofocus required>
@@ -51,7 +54,7 @@
     <audio data-key="letsgo" src="sound/mlpit_mario_lets-a_go.wav"></audio>
     <audio data-key="coin" src="sound/smb3_coin.wav"></audio>
     <audio data-key="ohno" src="sound/mlpit_mario_oh_no.wav"></audio>
-    <audio data-key="bump" src="sound/smb3_bump.wav"></audio>
+    <audio data-key="bump" src="sound/smb3_fireball.wav"></audio>
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
