--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <h1>Roster</h1>
         </div>
         <form id="new-person">
-          <div class="small-9 columns">
-            <input type="text" name="personName" placeholder="Enter name" autofocus required>
-          </div>
-          <div class="small-3-columns">
-            <button type="submit" class="button">Add Person</button>
+          <div class="input-group">
+            <input class="input-group-field" type="text" name="personName" placeholder="Enter name" autofocus required/>
+            <div class="input-group-button">
+              <button class="button" type="submit">Add Person</button>
+            </div>
           </div>
         </form>
       </div>
@@ -35,7 +35,7 @@
         <ul id="person-list">
           <li class="person template">
             <span class="person-name"></span>
-            <span class="actions">
+            <span class="actions button-group">
               <button class="remove alert button">Remove</button>
               <button class="promote success button">Promote</button>
               <button class="secondary button up">↑</button>
