--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -17,13 +18,15 @@
       <div class="medium-offset-2 medium-8 columns">
         <div class="header">
           <img src="img/mario.gif" width=50px />
-          <h1>Roster</h1>
+          <h1>ROSTER</h1>
         </div>
         <form id="new-person">
           <div class="input-group">
             <input class="input-group-field" type="text" name="personName" placeholder="Enter name" autofocus required/>
             <div class="input-group-button">
-              <button class="button" type="submit">Add Person</button>
+              <button class="button" type="submit">
+                <i class="fa fa-hand-o-right"></i>
+              </button>
             </div>
           </div>
         </form>
@@ -36,10 +39,18 @@
           <li class="person template">
             <span class="person-name"></span>
             <span class="actions button-group">
-              <button class="remove alert button">Remove</button>
-              <button class="promote success button">Promote</button>
-              <button class="secondary button up">↑</button>
-              <button class="secondary button down">↓</button>
+              <button class="remove alert button">
+                <i class="fa fa-trash-o"></i>
+              </button>
+              <button class="promote success button">
+                <i class="fa fa-star-o"></i>
+              </button>
+              <button class="secondary button up">
+                <i class="fa fa-thumbs-o-up"></i>
+              </button>
+              <button class="secondary button down">
+                <i class="fa fa-thumbs-o-down"></i>
+              </button>
             </span>
           </li>
         </ul>
