Disable some buttons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input class="input-group-field" type="text" name="personName" placeholder="Enter name" autofocus required/>
             <div class="input-group-button">
               <button class="button" type="submit">
-                <i class="fa fa-hand-o-right"></i>
+                <i class="fa fa-superpowers"></i>
               </button>
             </div>
           </div>
@@ -65,7 +65,7 @@
     <audio data-key="letsgo" src="sound/mlpit_mario_lets-a_go.wav"></audio>
     <audio data-key="coin" src="sound/smb3_coin.wav"></audio>
     <audio data-key="ohno" src="sound/mlpit_mario_oh_no.wav"></audio>
-    <audio data-key="bump" src="sound/smb3_fireball.wav"></audio>
+    <audio data-key="fireball" src="sound/smb3_fireball.wav"></audio>
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
