--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
       <div class="medium-offset-2 medium-8 columns">
         <ul id="person-list">
           <li class="person template">
-            <span class="person-name" contenteditable="true"></span>
+            <span class="person-name" contenteditable="false"></span>
             <span class="actions button-group">
+              <button class="edit button">
+                <i class="fa fa-pencil"></i>
+              </button>
               <button class="remove alert button">
                 <i class="fa fa-trash-o"></i>
               </button>
