--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="medium-offset-2 medium-8 columns">
         <div class="header">
           <img src="img/mario.gif" width=50px />
-          <h1>ROSTER</h1>
+          <h2>ROSTER</h2>
         </div>
         <form id="new-person">
           <div class="input-group">
@@ -37,11 +37,8 @@
       <div class="medium-offset-2 medium-8 columns">
         <ul id="person-list">
           <li class="person template">
-            <span class="person-name" contenteditable="false"></span>
+            <span class="person-name" contenteditable="true"></span>
             <span class="actions button-group">
-              <button class="edit button">
-                <i class="fa fa-pencil"></i>
-              </button>
               <button class="remove alert button">
                 <i class="fa fa-trash-o"></i>
               </button>
