--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input class="input-group-field" type="text" name="personName" placeholder="Enter name" autofocus required/>
             <div class="input-group-button">
               <button class="button" type="submit">
-                <i class="fa fa-superpowers"></i>
+                <i class="fa fa-plus"></i>
               </button>
             </div>
           </div>
